# indian-data-project

./: .gitignore  BRAND.md  CHANGELOG.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
pipeline/: CURATED_DATA_AUDIT.md  PIPELINE_DATA_SOURCES.md  README.md  pyproject.toml
pipeline/src/: main.py
pipeline/src/census/transform/: literacy.py
pipeline/src/common/: curated_validator.py  mospi_client.py  rbi_handbook.py
pipeline/src/crime/: main.py
pipeline/src/crime/sources/: curated.py  world_bank.py
pipeline/src/crime/transform/: cybercrime.py  justice.py  overview.py  police.py  road_accidents.py  women_safety.py
pipeline/src/crime/validate/: schemas.py
pipeline/src/economy/: main.py
pipeline/src/economy/sources/: mospi.py  mospi_nas.py  mospi_wpi.py
pipeline/src/economy/transform/: gdp.py  inflation.py  sectors.py
pipeline/src/economy/validate/: schemas.py
pipeline/src/education/: main.py
pipeline/src/education/sources/: curated.py
pipeline/src/education/transform/: quality.py
pipeline/src/education/validate/: schemas.py
pipeline/src/elections/: main.py
pipeline/src/elections/sources/: curated.py
pipeline/src/elections/transform/: results.py
pipeline/src/employment/: main.py
pipeline/src/environment/: main.py
pipeline/src/extract/: csv_parser.py
pipeline/src/healthcare/: main.py
pipeline/src/rbi/: main.py
pipeline/src/states/: main.py
pipeline/src/transform/: budget_trends.py  budget_vs_actual.py  derive.py  sankey.py
pipeline/src/validate/: invariants.py  schemas.py
public/: llms.txt  (+1 more)
(+342 files in other folders)
