[project]
name = "india-budget-pipeline"
version = "0.1.0"
description = "Data pipeline for India Public Data Portal - fetches and transforms Union Budget data"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "requests>=2.28",
    "pydantic>=2.0",
    "openpyxl>=3.1",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
